2019-10-06  Thomas E. Dickey  <dickey@invisible-island.net>

	* package/debian/changelog: repair "realpath" dependency

	* configure: regen

	* aclocal.m4: resync with my-autoconf

	* package/debian/control: repair "realpath" dependency

	* package/debian/changelog, package/misc_tools.spec: bump

2019-06-30  Thomas E. Dickey  <dickey@invisible-island.net>

	* config.sub: 2019-06-30

2019-06-10  Thomas E. Dickey  <dickey@invisible-island.net>

	* config.guess: 2019-06-10

2019-01-06  Thomas E. Dickey  <dickey@invisible-island.net>

	* makefile.in: add a dummy "check" rule, for Arch mkpkg

	* package/debian/changelog, package/misc_tools.spec, COPYING.asc, COPYING:
	bump

	* configure: regen

	* aclocal.m4: resync with my-autoconf

2019-01-04  Thomas E. Dickey  <dickey@invisible-island.net>

	* config.sub: 2019-01-05

2019-01-02  Thomas E. Dickey  <dickey@invisible-island.net>

	* config.guess: 2019-01-03

2018-03-24  Thomas E. Dickey  <dickey@invisible-island.net>

	* COPYING.asc: bump

	* package/debian/rules: use Debian build-flags

	* package/debian/watch: update ftp url

	* configure: regen

	* aclocal.m4: resync with my-autoconf

	* COPYING: bump

	* package/misc_tools.spec: bump, update ftp url, disable debug

	* package/debian/changelog: bump

2018-02-05  Thomas E. Dickey  <dickey@invisible-island.net>

	* config.sub: 2018-01-15

	* config.guess: 2018-01-26

2015-01-04  Thomas E. Dickey  <dickey@invisible-island.net>

	* src/tisplit/timerge.c:
	header-comment was cut/paste from acmerge - fix

	* package/debian/changelog, package/misc_tools.spec: bump

	* configure: regen

	* aclocal.m4: add CF_CC_ENV_FLAGS

	* aclocal.m4: updated macros from my-autoconf:
	  + CF_ADD_CFLAGS
	    workaround for ash-shell
	  + CF_ANSI_CC_CHECK
	    Add 3rd parameter to AC_DEFINE's to allow autoheader to run.
	    Split-out CF_CC_ENV_FLAGS.
	  + CF_CHECK_CACHE
	    Add parameter to AC_DEFINE_UNQUOTED() to allow it to be recognized by
	    autoheader.
	  + CF_CLANG_COMPILER